# askdocs

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: ci.yml
ai-service/: pyproject.toml
ai-service/app/: embeddings.py  generation.py  main.py  schemas.py
ai-service/tests/: test_embed.py  test_generate.py
backend/: go.mod  go.sum
backend/cmd/api/: main.go
backend/internal/auth/: auth.go  service.go  service_test.go
backend/internal/config/: config.go  config_test.go
backend/internal/document/: chunker.go  chunker_test.go  document.go  ingest.go  ingest_test.go  pool.go  pool_test.go  service.go  service_test.go
backend/internal/platform/aiclient/: client.go  client_test.go  generate.go  generate_test.go
backend/internal/platform/disk/: store.go
backend/internal/platform/extract/: extract.go  extract_test.go
backend/internal/platform/httpapi/: auth.go  auth_test.go  documents.go  documents_test.go  middleware.go  (+6 more)
backend/internal/query/: query.go  service.go  service_test.go
backend/migrations/: 000002_create_documents.down.sql  000002_create_documents.up.sql  000003_add_chunk_embedding.down.sql  000003_add_chunk_embedding.up.sql  000004_create_conversations.up.sql  000005_create_users.down.sql  000005_create_users.up.sql
frontend/: next.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: AuthForm.tsx  Chat.tsx  DocumentsPanel.tsx  UserMenu.tsx
frontend/lib/: api.ts
scripts/: smoke.sh
(+8 files in other folders)
