[project]
name = "askdocs-ai"
version = "0.1.0"
description = "Embeddings, retrieval and LLM generation service for askdocs"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "fastembed>=0.4",
    "anthropic>=0.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Defaults (pyflakes + pycodestyle errors) plus import sorting and modern-syntax
# upgrades. Deliberately small — lint should catch bugs, not impose style debates.
extend-select = ["I", "UP", "B"]
